--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header></header>
+    <main>
+
+    </main>
     
+    <footer>
+
+    </footer>
 </body>
 </html>
