--- a/index.html
+++ b/index.html
@@ -1,19 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gamehub</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Sixtyfour&display=swap" rel="stylesheet"> 
+    <script defer src="js/api-test.js"></script>
 </head>
+
 <body>
-    <header></header>
+    <!--Header-->
+    <header>
+        <!--Header container-->
+        <div class="header-container">
+            <!--Logo container-->
+            <div class="logo">
+                <a href="index.html">
+                    <img src="assets/gamehub-logo.svg" alt="gamehub-logo">
+                </a>
+            </div>
+            <div class="nav-links">
+                <li><a href="http://">Home</a></li>
+                <li><a href="http://">Home</a></li>
+                <li><a href="http://">Home</a></li>
+                <li><a href="http://">Home</a></li>
+            </div>
+            <p>hello</p>
+        </div>
+    </header>
     <main>
-
+        <div id="imageContainer">
+        </div>
     </main>
-    
     <footer>
-
     </footer>
 </body>
+
 </html>
