--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamehub</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Sixtyfour&display=swap" rel="stylesheet"> 
-    <script defer src="js/api-test.js"></script>
+    <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
+    <script defer src="scripts/main.js"></script>
 </head>
 
 <body>
@@ -29,14 +27,31 @@
                 <li><a href="http://">Home</a></li>
                 <li><a href="http://">Home</a></li>
             </div>
-            <p>hello</p>
+           <div class="account">
+            <img src="assets/user-regular.svg" alt="">
+           </div>
         </div>
     </header>
     <main>
-        <div id="imageContainer">
+        <div class="hero-container">
+            <h1>Your Hero Title</h1>
+            <p>Your hero content goes here. This could include a slogan, promotion, or key message.</p>
         </div>
+
+        <!-- Sale Items Container -->
+    <div class="sale-items-container">
+    </div>
+
     </main>
     <footer>
+        <!-- Footer Icons -->
+    <div class="footer-icons">
+       
+        <i class="fab fa-facebook"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-instagram"></i>
+        
+    </div>
     </footer>
 </body>
 
