--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <nav>
                 <div class="nav-links">
                     <li><a href="http://">Home</a></li>
-                    <li><a href="http://">Home</a></li>
-                    <li><a href="http://">Home</a></li>
-                    <li><a href="http://">Home</a></li>
+                    <li><a href="products/index.html">Shop</a></li>
+                    <li><a href="http://">About</a></li>
+                    <li><a href="http://">Contact</a></li>
                 </div>
             </nav>
             <div class="icons-container">
@@ -45,7 +45,7 @@
             <p>Welcome to gamehub </p>
         </div>
         <!-- Sale Items Container -->
-        <div class="sale-items-container">
+        <div class="items-container">
             <a href="product/index.html">
                 <div class="product-container">
                     <img src="https://static.noroff.dev/api/gamehub/0-ping-pong-championship.jpg"
@@ -91,7 +91,7 @@
             
         </div>
         </div>
-        <div class="sale-items-container">
+        <div class="items-container">
             <div class="product-container">
                 <img src="https://static.noroff.dev/api/gamehub/4-assassin.jpg" alt="">
                 <h2 class="product-title">Ping Pong Championship</h2>
