--- a/products/index.html
+++ b/products/index.html
@@ -20,7 +20,7 @@
         </div>
         <nav>
             <div class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="#">Shop</a></li>
                 <li><a href="#">Contact</a></li>
                 <li><a href="#">About</a></li>
@@ -40,32 +40,15 @@
 <main>
     <div class="items-container">
         <div class="product-container">
+            <a href="/product/index.html">
             <img src="https://static.noroff.dev/api/gamehub/4-assassin.jpg" alt="">
             <h2 class="product-title">Ping Pong Championship</h2>
             <p class="product-regular-price">$29.99</p>
             <p class="product-discounted-price">$19.99</p>
+        </a>
         </div>
-        <div class="product-container">
-            <img src="https://static.noroff.dev/api/gamehub/4-assassin.jpg" alt="">
-            <h2 class="product-title">Ping Pong Championship</h2>
-            <p class="product-regular-price">$29.99</p>
-            <p class="product-discounted-price">$19.99</p>
-        </div>
-        <div class="product-container">
-            <img src="https://static.noroff.dev/api/gamehub/4-assassin.jpg" alt="">
-            <h2 class="product-title">Ping Pong Championship</h2>
-            <p class="product-regular-price">$29.99</p>
-            <p class="product-discounted-price">$19.99</p>
-        </div>
-        <div class="product-container">
-            <img src="https://static.noroff.dev/api/gamehub/4-assassin.jpg" alt="">
-            <h2 class="product-title">Ping Pong Championship</h2>
-            <p class="product-regular-price">$29.99</p>
-            <p class="product-discounted-price">$19.99</p>
-        </div>
-        <div>
-            <button>View all</button>
-        </div>
+        
+        
     </div>
 </main>
 
