--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="my-account">
                     <a href="my-profile/">
                         <i class="fa-sharp fa-solid fa-user"></i>
-                        <p>My profile</p>
+                        <p>Profile</p>
                         
                         
                     </a>
@@ -50,10 +50,12 @@
     </header>
     <main>
         <div class="hero-container">
-            <h1>Gamehub</h1>
-            <p>Welcome to gamehub </p>
+            <img src="/assets/banner.svg">
         </div>
         <!-- Sale Items Container -->
+        <div class="sale-text">
+            <p>Sales up to 50% off</p>
+        </div>
         <div class="items-container">
             <a href="product/index.html">
                 <div class="product-container">
