--- a/checkout/index.html
+++ b/checkout/index.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <!--Header-->
-    <header>
+      <!--Header-->
+      <header>
         <!--Header container-->
         <div class="header-container">
             <!--Logo container-->
@@ -22,22 +22,25 @@
             </div>
             <nav>
                 <div class="nav-links">
-                    <li><a href="http://">Home</a></li>
-                    <li><a href="products/index.html">Shop</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/products/index.html">Shop</a></li>
                     <li><a href="http://">About</a></li>
                     <li><a href="http://">Contact</a></li>
                 </div>
             </nav>
             <div class="icons-container">
                 <div class="my-account">
-                    <a href="my-profile/myprofile.html">
-                        <i class="fas fa-user"></i>
-                        <p>My profile</p>
+                    <a href="my-profile/">
+                        <i class="fa-sharp fa-solid fa-user"></i>
+                        <p>Profile</p>
+                        
+                        
                     </a>
                 </div>
+
                 <div class="shopping-cart">
-                    <a href="shopping-cart.html">
-                        <i class="fas fa-cart-arrow-down"></i>
+                    <a href="checkout/index.html">
+                        <i class="fa-solid fa-cart-shopping"></i>
                         <p>Cart</p>
                     </a>
                 </div>
