--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main>
         <div class="hero-container">
-            <img src="/assets/banner.svg">
+            <img src="/assets/banner.svg" alt="Hero image">
         </div>
         <!-- Sale Items Container -->
         <div class="sale-text">
