--- a/product/index.html
+++ b/product/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
 
-<header>
+   <!--Header-->
+   <header>
     <!--Header container-->
     <div class="header-container">
         <!--Logo container-->
@@ -20,17 +21,26 @@
         </div>
         <nav>
             <div class="nav-links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/products/index.html">Shop</a></li>
+                <li><a href="http://">About</a></li>
+                <li><a href="http://">Contact</a></li>
             </div>
         </nav>
         <div class="icons-container">
             <div class="my-account">
-                <a href="my-profile/myprofile.html">
-                    <i class="fas fa-user"></i>
-                    <p>My account</p>
+                <a href="my-profile/">
+                    <i class="fa-sharp fa-solid fa-user"></i>
+                    <p>Profile</p>
+                    
+                    
+                </a>
+            </div>
+
+            <div class="shopping-cart">
+                <a href="/checkout/index.html">
+                    <i class="fa-solid fa-cart-shopping"></i>
+                    <p>Cart</p>
                 </a>
             </div>
         </div>
