--- a/products/index.html
+++ b/products/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Product</title>
     <link rel="stylesheet" href="/css/styles.css" />
+    <script type="module" src="/scripts/products/products.mjs"></script>
     <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
   </head>
   <body>
