--- a/checkout/index.html
+++ b/checkout/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamehub - Shopping Cart</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <script type="module" src="/scripts/utils/cart.mjs"></script>
     <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
 </head>
 
@@ -49,18 +50,11 @@
     </header>
     <main>
         <div class="cart-page-container">
-            <h1>Your Shopping Cart</h1>
+            <h1 class="cart-text">Your Shopping Cart is empty!</h1>
             <div class="cart-items">
                 <!-- Cart items will be dynamically added here -->
                 <!-- Example item -->
-                <div class="cart-item">
-                    <img src="https://static.noroff.dev/api/gamehub/0-ping-pong-championship.jpg" alt="Product Image">
-                    <div class="item-details">
-                        <h2>Product Name</h2>
-                        <p>Price: $19.99</p>
-                        <button class="remove-item-btn">Remove</button>
-                    </div>
-                </div>
+               
 
                 <div class="cart-item">
                     <img src="https://static.noroff.dev/api/gamehub/0-ping-pong-championship.jpg" alt="Product Image">
