--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gamehub</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
-    <script type="module" src="/scripts/main.js"></script>
+    <script type="module" src="/scripts/pages/home.js"></script>
 </head>
 
 <body>
