--- a/checkout/index.html
+++ b/checkout/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamehub - Shopping Cart</title>
     <link rel="stylesheet" href="/css/styles.css">
-    <script type="module" src="/scripts/utils/cart.mjs"></script>
+    <script type="module" src="/scripts/pages/checkout.mjs"></script>
     <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
 </head>
 
@@ -49,11 +49,10 @@
         </div>
     </header>
     <main>
-        <div class="cart-page-container">
+        <!-- <div class="cart-page-container">
             <h1 class="cart-text">Your Shopping Cart is empty!</h1>
             <div class="cart-items">
-                <!-- Cart items will be dynamically added here -->
-                <!-- Example item -->
+                
                
 
                 <div class="cart-item">
@@ -69,7 +68,7 @@
                 <p>Total: $19.99</p>
                 <button class="checkout-btn">Checkout</button>
             </div>
-        </div>
+        </div> -->
     </main>
     <footer>
         <!-- Footer Icons -->
