--- a/checkout/index.html
+++ b/checkout/index.html
@@ -43,6 +43,7 @@
                     <a href="checkout/index.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <p>Cart</p>
+                        <span class="cart-counter">0</span> 
                     </a>
                 </div>
             </div>
