--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Gamehub</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
-    <script type="module" src="/scripts/pages/home.mjs"></script>
+    <script type="module" src="home.mjs"></script>
 </head>
 
 <body>
@@ -40,7 +40,7 @@
                     <a href="checkout/index.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <p>Cart</p>
-                        <span class="cart-counter">0</span> 
+                        <span class="cart-counter">0</span>
                     </a>
                 </div>
             </div>
