--- a/products/index.html
+++ b/products/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Product</title>
   <link rel="stylesheet" href="/css/styles.css" />
-  <script type="module" src="/scripts/pages/products.mjs"></script>
+  <script type="module" src="products.mjs"></script>
   <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
 </head>
 
