--- a/checkout/confirmation/index.html
+++ b/checkout/confirmation/index.html
@@ -44,7 +44,7 @@
                 </div>
 
                 <div class="shopping-cart">
-                    <a href="checkout/index.html">
+                    <a href="/checkout/index.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <p>Cart</p>
                     </a>
