--- a/checkout/index.html
+++ b/checkout/index.html
@@ -40,7 +40,7 @@
                 </div>
 
                 <div class="shopping-cart">
-                    <a href="checkout/index.html">
+                    <a href="index.html">
                         <i class="fa-solid fa-cart-shopping"></i>
                         <p>Cart</p>
                         <span class="cart-counter">0</span> 
