--- a/product/index.html
+++ b/product/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
     <link rel="stylesheet" href="/css/styles.css" type="text/css">
-    <script type="module" src="/scripts/product/product.mjs"></script>
+    <script type="module" src="product.mjs"></script>
     <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
 </head>
 <body>
