--- a/checkout/confirmation/index.html
+++ b/checkout/confirmation/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamehub - Order Confirmation</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script type="module" src="confirmation.mjs"></script>
-    <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         <div class="header-container">
             <!--Logo container-->
             <div class="logo">
-                <a href="index.html">
+                <a href="/index.html">
                     <img src="/assets/gamehub-logo.svg" alt="gamehub-logo">
                 </a>
             </div>
@@ -38,8 +39,11 @@
                 </div>
                 <div class="shopping-cart">
                     <a href="/checkout/index.html">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span class="material-symbols-outlined" id="shopping-cart-icon">
+                            shopping_cart
+                            </span>
                         <p>Cart</p>
+                        <span class="cart-counter">0</span> 
                     </a>
                 </div>
             </div>
