--- a/checkout/index.html
+++ b/checkout/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamehub - Shopping Cart</title>
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script type="module" src="checkout.mjs"></script>
-    <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
+    
 </head>
 
 <body>
@@ -41,7 +42,9 @@
 
                 <div class="shopping-cart">
                     <a href="index.html">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span class="material-symbols-outlined" id="shopping-cart-icon">
+                            shopping_cart
+                            </span>
                         <p>Cart</p>
                         <span class="cart-counter">0</span> 
                     </a>
