--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamehub</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script type="module" src="home.mjs"></script>
 </head>
 
@@ -38,9 +38,11 @@
                 </div>
                 <div class="shopping-cart">
                     <a href="checkout/index.html">
-                        <i class="fa-solid fa-cart-shopping"></i>
+                        <span class="material-symbols-outlined" id="shopping-cart-icon">
+                            shopping_cart
+                            </span>
                         <p>Cart</p>
-                        <span class="cart-counter">0</span>
+                        <span class="cart-counter">0</span> 
                     </a>
                 </div>
             </div>
