--- a/products/index.html
+++ b/products/index.html
@@ -6,8 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Product</title>
   <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script type="module" src="products.mjs"></script>
-  <script src="https://kit.fontawesome.com/3554cad4e7.js" crossorigin="anonymous"></script>
+  
 </head>
 
 <body>
@@ -38,9 +39,11 @@
         </div>
         <div class="shopping-cart">
           <a href="/checkout/index.html">
-            <i class="fa-solid fa-cart-shopping"></i>
-            <p>Cart</p>
-            <span class="cart-counter">0</span> 
+            <span class="material-symbols-outlined" id="shopping-cart-icon">
+              shopping_cart
+              </span>
+          <p>Cart</p>
+          <span class="cart-counter">0</span> 
           </a>
         </div>
       </div>
