--- a/checkout/confirmation/index.html
+++ b/checkout/confirmation/index.html
@@ -33,7 +33,9 @@
             <div class="icons-container">
                 <div class="my-account">
                     <a href="my-profile/">
-                        <i class="fa-sharp fa-solid fa-user"></i>
+                        <span class="material-symbols-outlined" id="my-account-icon">
+                            person
+                            </span>
                         <p>Profile</p>
                     </a>
                 </div>
@@ -74,6 +76,8 @@
             <i class="fab fa-twitter"></i>
             <i class="fab fa-instagram"></i>
         </div>
+
+        
     </footer>
 </body>
 
