--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamehub</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script type="module" src="home.mjs"></script>
 </head>
 
@@ -32,17 +33,16 @@
             <div class="icons-container">
                 <div class="my-account">
                     <a href="my-profile/">
-                        <i class="fa-sharp fa-solid fa-user"></i>
+                        <span class="material-symbols-outlined"> person </span>
                         <p>Profile</p>
                     </a>
                 </div>
                 <div class="shopping-cart">
                     <a href="checkout/index.html">
                         <span class="material-symbols-outlined" id="shopping-cart-icon">
-                            shopping_cart
-                            </span>
+                            shopping_cart </span>
                         <p>Cart</p>
-                        <span class="cart-counter">0</span> 
+                        <span class="cart-counter">0</span>
                     </a>
                 </div>
             </div>
@@ -61,11 +61,25 @@
         </div>
     </main>
     <footer>
-        <!-- Footer Icons -->
-        <div class="footer-icons">
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
+        <div class="footer-container">
+            <!-- Logo Section -->
+            <div class="footer-container logo-section">
+                <img src="assets/gamehub-logo.svg" alt="Your Logo" class="footer-logo">
+            </div>
+
+            <div class="footer-links">
+                <a href="/privacy-policy.html">Privacy Policy</a>
+                <a href="/terms-and-conditions.html">Terms & Conditions</a>
+            </div>
+            <p class="copyright">© 2024 Gamehub. All rights reserved.</p>
+
+            <div class="quick-links">
+                <h3>Quick Links</h3>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Shop</a></li>
+                <li><a href="index.html">About</a></li>
+                <li><a href="index.html">Contact</a></li>
+            </div>
         </div>
     </footer>
 </body>
