--- a/products/index.html
+++ b/products/index.html
@@ -33,7 +33,9 @@
       <div class="icons-container">
         <div class="my-account">
           <a href="my-profile/">
-            <i class="fa-sharp fa-solid fa-user"></i>
+            <span class="material-symbols-outlined">
+              person
+              </span>
             <p>Profile</p>
           </a>
         </div>
