--- a/index.html
+++ b/index.html
@@ -24,21 +24,15 @@
             </div>
             <nav>
                 <div class="nav-links">
-                    <li><a href="http://">Home</a></li>
-                    <li><a href="products/index.html">Shop</a></li>
-                    <li><a href="http://">About</a></li>
-                    <li><a href="http://">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="/products/index.html">Shop</a></li>
+                    <li><a href="/about/index.html">About</a></li>
+                    <li><a href="/contact/index.html">Contact</a></li>
                 </div>
             </nav>
             <div class="icons-container">
-                <div class="my-account">
-                    <a href="my-profile/">
-                        <span class="material-symbols-outlined"> person </span>
-                        <p>Profile</p>
-                    </a>
-                </div>
                 <div class="shopping-cart">
-                    <a href="checkout/index.html">
+                    <a href="/checkout/index.html">
                         <span class="material-symbols-outlined" id="shopping-cart-icon">
                             shopping_cart </span>
                         <p>Cart</p>
@@ -63,23 +57,27 @@
     <footer>
         <div class="footer-container">
             <!-- Logo Section -->
-            <div class="footer-container logo-section">
+            <a class="footer-container logo-section" href="index.html">
                 <img src="assets/gamehub-logo.svg" alt="Your Logo" class="footer-logo">
-            </div>
-
-            <div class="footer-links">
-                <a href="/privacy-policy.html">Privacy Policy</a>
-                <a href="/terms-and-conditions.html">Terms & Conditions</a>
-            </div>
-            <p class="copyright">© 2024 Gamehub. All rights reserved.</p>
-
+            </a>
             <div class="quick-links">
                 <h3>Quick Links</h3>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Shop</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Contact</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="/products/index.html">Shop</a></li>
+                <li><a href="/about/index.html">About</a></li>
+                <li><a href="/contact/index.html">Contact</a></li>
             </div>
+            <div class="quick-links">
+                <h3>Social Media</h3>
+                <li><a href="https://www.facebook.com/">facebook</a></li>
+                <li><a href="https://www.twitter.com/">Twitter</a></li>
+                <li><a href="https://www.instagram.com/">Instagram</a></li>
+            </div>
+            <div class="footer-links">
+                <a href="/privacy-policy/index.html">Privacy Policy</a>
+                <a href="/terms-and-conditions/index.html">Terms & Conditions</a>
+            </div>
+            <p class="copyright">© 2024 Gamehub. All rights reserved.</p>
         </div>
     </footer>
 </body>
