--- a/products/index.html
+++ b/products/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Product</title>
   <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script type="module" src="products.mjs"></script>
-  
 </head>
 
 <body>
@@ -25,27 +25,17 @@
       <nav>
         <div class="nav-links">
           <li><a href="/index.html">Home</a></li>
-          <li><a href="/products/index.html">Shop</a></li>
-          <li><a href="http://">About</a></li>
-          <li><a href="http://">Contact</a></li>
+          <li><a href="#">Shop</a></li>
+          <li><a href="/about/index.html">About</a></li>
+          <li><a href="/contact/index.html">Contact</a></li>
         </div>
       </nav>
       <div class="icons-container">
-        <div class="my-account">
-          <a href="my-profile/">
-            <span class="material-symbols-outlined">
-              person
-              </span>
-            <p>Profile</p>
-          </a>
-        </div>
         <div class="shopping-cart">
           <a href="/checkout/index.html">
-            <span class="material-symbols-outlined" id="shopping-cart-icon">
-              shopping_cart
-              </span>
-          <p>Cart</p>
-          <span class="cart-counter">0</span> 
+            <span class="material-symbols-outlined" id="shopping-cart-icon"> shopping_cart </span>
+            <p>Cart</p>
+            <span class="cart-counter">0</span>
           </a>
         </div>
       </div>
@@ -53,19 +43,35 @@
   </header>
   <main>
     <div class="category-buttons">
-      
-      
     </div>
     <div class="items-container">
     </div>
     </div>
   </main>
   <footer>
-    <!-- Footer Icons -->
-    <div class="footer-icons">
-      <i class="fab fa-facebook"></i>
-      <i class="fab fa-twitter"></i>
-      <i class="fab fa-instagram"></i>
+    <div class="footer-container">
+      <!-- Logo Section -->
+      <a class="footer-container logo-section" href="index.html">
+        <img src="assets/gamehub-logo.svg" alt="Your Logo" class="footer-logo">
+      </a>
+      <div class="quick-links">
+        <h3>Quick Links</h3>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="#">Shop</a></li>
+        <li><a href="/about/index.html">About</a></li>
+        <li><a href="/contact/index.html">Contact</a></li>
+      </div>
+      <div class="quick-links">
+        <h3>Social Media</h3>
+        <li><a href="https://www.facebook.com/">facebook</a></li>
+        <li><a href="https://www.twitter.com/">Twitter</a></li>
+        <li><a href="https://www.instagram.com/">Instagram</a></li>
+      </div>
+      <div class="footer-links">
+        <a href="/privacy-policy/index.html">Privacy Policy</a>
+        <a href="/terms-and-conditions/index.html">Terms & Conditions</a>
+      </div>
+      <p class="copyright">© 2024 Gamehub. All rights reserved.</p>
     </div>
   </footer>
 </body>
