--- a/checkout/index.html
+++ b/checkout/index.html
@@ -48,7 +48,7 @@
         <div class="footer-container">
             <!-- Logo Section -->
             <a class="footer-container logo-section" href="index.html">
-                <img src="assets/gamehub-logo.svg" alt="Your Logo" class="footer-logo">
+                <img src="/assets/gamehub-logo.svg" alt="Your Logo" class="footer-logo">
             </a>
             <div class="quick-links">
                 <h3>Quick Links</h3>
