--- a/terms-and-conditions/index.html
+++ b/terms-and-conditions/index.html
@@ -92,7 +92,7 @@
 
             <div class="footer-links">
                 <a href="/privacy-policy/index.html">Privacy Policy</a>
-                <a href="index.html">Terms & Conditions</a>
+                <a href="/terms-and-conditions/index.html">Terms & Conditions</a>
             </div>
             <p class="copyright">© 2024 Gamehub. All rights reserved.</p>
 
