--- a/products/index.html
+++ b/products/index.html
@@ -1,83 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script type="module" src="products.mjs"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Product</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-  <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <script type="module" src="products.mjs"></script>
-</head>
-
-<body>
-  <!--Header-->
-  <header>
-    <!--Header container-->
-    <div class="header-container">
-      <!--Logo container-->
-      <div class="logo">
-        <a href="/index.html">
-          <img src="/assets/gamehub-logo.svg" alt="gamehub-logo" />
-        </a>
-      </div>
-      <nav>
-        <div class="nav-links">
-          <li><a href="/index.html">Home</a></li>
-          <li><a href="#">Shop</a></li>
-          <li><a href="/about/index.html">About</a></li>
-          <li><a href="/contact/index.html">Contact</a></li>
-        </div>
-      </nav>
-      <div class="icons-container">
-        <div class="shopping-cart">
-          <a href="/checkout/index.html">
-            <span class="material-symbols-outlined" id="shopping-cart-icon"> shopping_cart </span>
-            <p>Cart</p>
-            <span class="cart-counter">0</span>
+  <body>
+    <!--Header-->
+    <header>
+      <!--Header container-->
+      <div class="header-container">
+        <!--Logo container-->
+        <div class="logo">
+          <a href="/index.html">
+            <img src="/assets/gamehub-logo.svg" alt="gamehub-logo" />
           </a>
         </div>
+        <nav>
+          <div class="nav-links">
+            <ul>
+              <li><a href="/index.html">Home</a></li>
+              <li><a href="#">Shop</a></li>
+              <li><a href="/about/index.html">About</a></li>
+              <li><a href="/contact/index.html">Contact</a></li>
+            </ul>
+          </div>
+        </nav>
+        <div class="icons-container">
+          <div class="shopping-cart">
+            <a href="/checkout/index.html">
+              <span class="material-symbols-outlined" id="shopping-cart-icon"> shopping_cart </span>
+              <p>Cart</p>
+              <span class="cart-counter">0</span>
+            </a>
+          </div>
+        </div>
       </div>
-    </div>
-  </header>
-  <main>
-    <div class="category-buttons">
-    </div>
-    <div class="items-container">
-    </div>
-    </div>
-  </main>
-  <footer>
-    <div class="footer-container">
-      <!-- Logo Section -->
-      <a class="footer-container logo-section" href="index.html">
-        <img src="/assets/gamehub-logo.svg" alt="Your Logo" class="footer-logo">
-      </a>
-      <div class="quick-links">
-        <h3>Quick Links</h3>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="#">Shop</a></li>
-        <li><a href="/about/index.html">About</a></li>
-        <li><a href="/contact/index.html">Contact</a></li>
-      </div>
-      <div class="quick-links">
-        <h3>Social Media</h3>
-        <li><a href="https://www.facebook.com/">facebook</a></li>
-        <li><a href="https://www.twitter.com/">Twitter</a></li>
-        <li><a href="https://www.instagram.com/">Instagram</a></li>
-      </div>
-      <div class="footer-links">
-        <a href="/privacy-policy/index.html">Privacy Policy</a>
-        <a href="/terms-and-conditions/index.html">Terms & Conditions</a>
-      </div>
-      <p class="copyright">© 2024 Gamehub. All rights reserved.</p>
-    </div>
-  </footer>
-</body>
+    </header>
+    <main>
+      <div class="category-buttons"></div>
+      <div class="items-container"></div>
+    </main>
+    <footer>
+      <div class="footer-container">
+        <!-- Logo Section -->
+        <a class="footer-container logo-section" href="index.html">
+          <img src="/assets/gamehub-logo.svg" alt="Your Logo" class="footer-logo" />
+        </a>
+        <div class="quick-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="#">Shop</a></li>
+            <li><a href="/about/index.html">About</a></li>
+            <li><a href="/contact/index.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="quick-links">
+          <h3>Social Media</h3>
+          <ul>
+            <li><a href="https://www.facebook.com/" target="_blank" rel="noopener">Facebook</a></li>
+            <li><a href="https://www.twitter.com/" target="_blank" rel="noopener">Twitter</a></li>
+            <li><a href="https://www.instagram.com/" target="_blank" rel="noopener">Instagram</a></li>
+          </ul>
+        </div>
 
+        <div class="footer-links">
+          <a href="/privacy-policy/index.html">Privacy Policy</a>
+          <a href="/terms-and-conditions/index.html">Terms & Conditions</a>
+        </div>
+        <p class="copyright">© 2024 Gamehub. All rights reserved.</p>
+      </div>
+    </footer>
+  </body>
 </html>
