--- a/checkout/index.html
+++ b/checkout/index.html
@@ -25,15 +25,20 @@
           </a>
         </div>
         <nav>
-          <div class="nav-links">
-            <ul>
-              <li><a href="/index.html">Home</a></li>
-              <li><a href="/products/index.html">Shop</a></li>
-              <li><a href="/about/index.html">About</a></li>
-              <li><a href="/contact/index.html">Contact</a></li>
-            </ul>
+          <div class="menu-btn" id="menuBtn">
+              <div class="menu-btn__burger">
+                  <span class="material-symbols-outlined">menu</span>
+              </div>
           </div>
-        </nav>
+          <div class="nav-links" id="navMenu">
+              <ul>
+                  <li><a href="/index.html">Home</a></li>
+                  <li><a href="/products/index.html">Shop</a></li>
+                  <li><a href="/about/index.html">About</a></li>
+                  <li><a href="/contact/index.html">Contact</a></li>
+              </ul>
+          </div>
+      </nav>
         <div class="icons-container">
           <div class="shopping-cart">
             <a href="index.html">
