--- a/index.html
+++ b/index.html
@@ -26,21 +26,20 @@
         </div>
         <nav>
           <div class="menu-btn" id="menuBtn">
-              <div class="menu-btn__burger">
-                  <span class="material-symbols-outlined">menu</span>
-              </div>
+            <div class="menu-btn__burger">
+              <span class="material-symbols-outlined">menu</span>
+            </div>
           </div>
           <div class="nav-links" id="navMenu">
-              <ul>
-                  <li><a href="#">Home</a></li>
-                  <li><a href="/products/index.html">Shop</a></li>
-                  <li><a href="/about/index.html">About</a></li>
-                  <li><a href="/contact/index.html">Contact</a></li>
-              </ul>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="/products/index.html">Shop</a></li>
+              <li><a href="/about/index.html">About</a></li>
+              <li><a href="/contact/index.html">Contact</a></li>
+            </ul>
           </div>
-      </nav>
-      
-      
+        </nav>
+
         <div class="icons-container">
           <div class="shopping-cart">
             <a href="/checkout/index.html">
@@ -53,9 +52,14 @@
       </div>
     </header>
     <main>
-      <div class="hero-container">
-        <img src="/assets/banner.svg" alt="Hero image" />
-      </div>
+      <section class="hero-container">
+        <div class="hero-content">
+          <h1>Welcome to Gamehub</h1>
+          <p>Explore the ultimate collection of video games across all platforms.</p>
+          <a href="/products/index.html" class="hero-button">Shop Now</a>
+        </div>
+      </section>
+
       <!-- Sale Items Container -->
       <div class="sale-text">
         <p>Sales up to 50% off</p>
