--- a/privacy-policy/index.html
+++ b/privacy-policy/index.html
@@ -165,7 +165,7 @@
 
         <div class="footer-links">
           <a href="#">Privacy Policy</a>
-          <a href="/terms-and-conditions.html">Terms & Conditions</a>
+          <a href="/terms-and-conditions/index.html">Terms & Conditions</a>
         </div>
         <p class="copyright">© 2024 Gamehub. All rights reserved.</p>
       </div>
